--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
   </style>
 </head>
 <body>
-  <div id="el">
+  <main id="el">
     <div id="img">
       <img src="images\image-qr-code.png" alt="QR Code">
     </div>
     <div id="txt">
       <div id="title">
-        Improve your front-end skills by building projects
+        <h1>Improve your front-end skills by building projects</h1>
       </div>
       <div id="dsc">
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
       </div>
     </div>
-  </div>
-
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Fares Sellami</a>.
   </div>
+  
 </body>
 </html>
